--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-openai==1.3.8
-pydantic==2.5.0
-asyncio-throttle==1.0.2
-python-dotenv==1.0.0
-httpx==0.25.2
+fastapi>=0.68.0,<0.104.0
+uvicorn[standard]>=0.15.0,<0.24.0
+openai>=1.0.0
+pydantic>=1.8.0,<2.0.0
+asyncio-throttle>=1.0.0
+python-dotenv>=0.19.0
+httpx>=0.24.0
